07.6.2000	fr.po added <garetxe@users.sourceforge.net>

	* fr.po: thanks to Christian Marillat a french translation is
	available.
	* main.c: Zapping now saves the current input and the current
	standard.
	
06.6.2000	Lazy day <garetxe@users.sourceforge.net>

	* help/C/properties.c: Added the help for the properties
	* zapping.spec.in: Written, but it doesn't build yet, and lacks
	dependencies.
	
04.6.2000	Plugin code remade <garetxe@users.sourceforge.net>

	* src/plugin_properties.c:
	* glade/zapping.glade: Dialog layout redesigned, now the plugins
	are configurable from the plugin_properties dialog too.
	* src/sound.[ch]: Preliminary esd sound support added.
	
02.6.2000	First problems fixed <garetxe@users.sourceforge.net>

	* configure.in: Added the option to disable X extensions (DGA)
	from the configure script (thanks to Jan Castermans).
	* configure.in: Added a test to determine whether to use
	node->children or node->childs.
	* tveng: Added frame timestamps.
	* callbacks.c:
	* main.c: Added option for resizing with fixed increments.
	
01.6.2000	Bug fixes <garetxe@users.sourceforge.net>

	* everything: Lots of bugs and fixme's have been corrected. Some
	code cleanups have been made too.
	* configure.in: Changed release number from 0.5.0pre1 to 0.5.0. I
	plan to release tomorrow.

29.5.2000	Tveng2 done <garetxe@users.sourceforge.net>

	* tveng2.c:
	* tveng.c: The V4L2 driver has been [re]written and apparently it
	works fine. The bugs when opening external programs and changing
	inputs are still there, though :(
	* plugins.c: Converted plugin_get_priority into a more general
	pourpouse function, plugin_get_misc_info. Added cathegories too.

20.5.2000	Back into coding <garetxe@users.sourceforge.net>

	* /me: I'm very busy with my finals, i won't have much time for
	coding this month (and half of the next one) :(	
	* plugins.c:
	* plugin_common.h: New plugin structure, more flexible.
	* plugins/template/template.c: