@@ -9,3 +9,4 @@
 #undef PACKAGE_SOURCE_DIR
 #undef DISABLE_X_EXTENSIONS
 #undef LIBXML_CHILDS
+#undef LIBXML_NO_ROOT
